<<<<<<< Updated upstream
[gd_scene load_steps=30 format=3 uid="uid://c85gi6mpnovqg"]

[ext_resource type="Script" path="res://Characters/enemy/enemyBody.gd" id="1_85cxx"]
[ext_resource type="Texture2D" uid="uid://bl0cx0qeuj6im" path="res://Assets/Orc.png" id="3_unxck"]
=======
[gd_scene load_steps=42 format=3 uid="uid://c85gi6mpnovqg"]

[ext_resource type="Script" path="res://Characters/enemy/enemy.gd" id="1_y7oei"]
[ext_resource type="Texture2D" uid="uid://bl0cx0qeuj6im" path="res://Assets/Enemies/Orc.png" id="3_unxck"]
[ext_resource type="Script" path="res://Characters/enemy/enemySprite.gd" id="4_wsbbw"]
[ext_resource type="Script" path="res://Characters/enemy/axeHitbox1.gd" id="5_gfo0u"]
[ext_resource type="Script" path="res://Characters/enemy/EnemyHurtbox.gd" id="6_kohm7"]
[ext_resource type="Script" path="res://Characters/enemy/triggerAttackRadius.gd" id="7_0pjoo"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_25o7i"]
bounce = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_csqip"]
radius = 13.0
height = 38.0
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id="AtlasTexture_5emb2"]
atlas = ExtResource("3_unxck")
region = Rect2(0, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ttq2r"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yhh8j"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3rma"]
atlas = ExtResource("3_unxck")
region = Rect2(300, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5grhy"]
atlas = ExtResource("3_unxck")
region = Rect2(400, 200, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lauu4"]
atlas = ExtResource("3_unxck")
region = Rect2(500, 200, 100, 100)

<<<<<<< Updated upstream
=======
[sub_resource type="AtlasTexture" id="AtlasTexture_gdqbr"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu60m"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8q6y"]
atlas = ExtResource("3_unxck")
region = Rect2(0, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ydk0"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iriae"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 500, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_htu68"]
atlas = ExtResource("3_unxck")
region = Rect2(300, 500, 100, 100)

>>>>>>> Stashed changes
[sub_resource type="AtlasTexture" id="AtlasTexture_q8u0j"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q16uv"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vysjc"]
atlas = ExtResource("3_unxck")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_41061"]
atlas = ExtResource("3_unxck")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdqbr"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu60m"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 400, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3wob"]
atlas = ExtResource("3_unxck")
region = Rect2(0, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0swl"]
atlas = ExtResource("3_unxck")
region = Rect2(100, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7n6m4"]
atlas = ExtResource("3_unxck")
region = Rect2(200, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6a5pg"]
atlas = ExtResource("3_unxck")
region = Rect2(300, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ckv0"]
atlas = ExtResource("3_unxck")
region = Rect2(400, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5b2f"]
atlas = ExtResource("3_unxck")
region = Rect2(500, 100, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8agcj"]
atlas = ExtResource("3_unxck")
region = Rect2(600, 100, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_56tqv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5emb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ttq2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yhh8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3rma")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5grhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lauu4")
}],
"loop": false,
"name": &"attack1",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
<<<<<<< Updated upstream
=======
"texture": SubResource("AtlasTexture_gdqbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu60m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu60m")
}],
"loop": false,
"name": &"damage",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8q6y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ydk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iriae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htu68")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
>>>>>>> Stashed changes
"texture": SubResource("AtlasTexture_q8u0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q16uv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vysjc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41061")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdqbr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu60m")
}],
"loop": false,
"name": &"hurt",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3wob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0swl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7n6m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6a5pg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ckv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5b2f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8agcj")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_0j156"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5crul"]
size = Vector2(12.1159, 14.5582)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3atyh"]
radius = 14.7578
height = 32.0148

[sub_resource type="Animation" id="Animation_ynu2p"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("axeArea/axeShape:shape:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(12.1159, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("axeArea/axeShape:shape:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(14.5582, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("axeArea/axeShape:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("axeArea/axeShape:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-32, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("axeArea/axeShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("axeArea/axeShape:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("axeArea/axeShape:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.721167]
}

[sub_resource type="Animation" id="Animation_0umlw"]
resource_name = "axeHitbox"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("axeArea/axeShape:shape:size:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(12.9941, -0.25, 0, 0.25, 0, 12.9941, -0.25, 0, 0.25, 0, 12.9941, -0.25, 0, 0.25, 0, 15.9597, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("axeArea/axeShape:shape:size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(17.4127, -0.25, 0, 0.25, 0, 24.59, -0.25, 0, 0.25, 0, 26.1792, -0.25, 0, 0.25, 0, 29.9963, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("axeArea/axeShape:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(14.7464, -0.25, 0, 0.25, 0, 27.3637, -0.25, 0, 0.25, 0, 31.4335, -0.25, 0, 0.25, 0, 32.1093, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("axeArea/axeShape:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(-16.9269, -0.25, 0, 0.25, 0, -7.13874, -0.25, 0, 0.25, 0, 0.71556, -0.25, 0, 0.25, 0, 11.9342, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("axeArea/axeShape:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("axeArea/axeShape:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("axeArea/axeShape:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.18675, 0.721167, 1.14232, 1.79121]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k5lmk"]
_data = {
"RESET": SubResource("Animation_ynu2p"),
"axeHitbox": SubResource("Animation_0umlw")
}

[sub_resource type="Animation" id="Animation_jjdqu"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("enemySprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_baum0"]
resource_name = "inv"
length = 0.7
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("enemySprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("enemySprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("enemySprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("enemySprite:modulate:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s4wti"]
_data = {
"RESET": SubResource("Animation_jjdqu"),
"inv": SubResource("Animation_baum0")
}

[node name="enemyBody" type="RigidBody2D"]
z_index = 10
collision_layer = 2
<<<<<<< Updated upstream
script = ExtResource("1_85cxx")
=======
collision_mask = 3
physics_material_override = SubResource("PhysicsMaterial_25o7i")
gravity_scale = 0.0
can_sleep = false
lock_rotation = true
script = ExtResource("1_y7oei")
>>>>>>> Stashed changes
metadata/_edit_group_ = true

[node name="enemyBodyShape" type="CollisionShape2D" parent="."]
position = Vector2(5, -2)
shape = SubResource("CapsuleShape2D_csqip")

[node name="enemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1.07288e-06)
scale = Vector2(2.05, 1.83)
sprite_frames = SubResource("SpriteFrames_56tqv")
<<<<<<< Updated upstream
animation = &"attack1"

[node name="enemyAP" type="AnimationPlayer" parent="."]
root_node = NodePath("../axeHitbox1")
libraries = {
"": SubResource("AnimationLibrary_js7bm")
}

[node name="Timer" type="Timer" parent="enemyAP"]
one_shot = true

[node name="enemyCShape" type="CollisionShape2D" parent="."]
position = Vector2(-1, -3)
scale = Vector2(1.5, 1.5)
shape = SubResource("CapsuleShape2D_3atyh")

[node name="axeHitbox1" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 2147483648
=======
animation = &"death"
script = ExtResource("4_wsbbw")

[node name="axeArea" type="Area2D" parent="."]
collision_layer = 2147483650
collision_mask = 2147483649
script = ExtResource("5_gfo0u")
>>>>>>> Stashed changes

[node name="axeShape" type="CollisionShape2D" parent="axeArea"]
visible = false
material = SubResource("CanvasItemMaterial_0j156")
position = Vector2(10, -32)
rotation = 0.721167
shape = SubResource("RectangleShape2D_5crul")
disabled = true

[node name="ColorRect" type="ColorRect" parent="axeArea/axeShape"]
offset_left = -6.36864
offset_top = -7.99448
offset_right = 20.6314
offset_bottom = 6.00552
scale = Vector2(0.484775, 1.17017)
color = Color(1, 0.342667, 0.62071, 0.627451)

[node name="EnemyHurtbox" type="Area2D" parent="."]
position = Vector2(-2, 0)
<<<<<<< Updated upstream
collision_layer = 3
collision_mask = 3
=======
collision_layer = 2
script = ExtResource("6_kohm7")
>>>>>>> Stashed changes

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2(5, -2)
shape = SubResource("CapsuleShape2D_csqip")
<<<<<<< Updated upstream
=======

[node name="triggerAttackRadius" type="Area2D" parent="."]
collision_layer = 2
script = ExtResource("7_0pjoo")

[node name="triggerAttackRadiusShape" type="CollisionShape2D" parent="triggerAttackRadius"]
position = Vector2(12, -6)
scale = Vector2(2.30386, 2.12402)
shape = SubResource("CapsuleShape2D_3atyh")

[node name="enemyAP" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k5lmk")
}

[node name="enemyAPinv" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s4wti")
}

[node name="enemyNavigationAgent" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 47.74

[connection signal="velocity_computed" from="enemyNavigationAgent" to="." method="_on_enemy_navigation_agent_velocity_computed"]
>>>>>>> Stashed changes
